# ai-study-buddy

./: .gitignore  Dockerfile  FULL_DOCUMENTATION.md  Jenkinsfile  README.md  application.py  pyproject.toml  requirements.txt  setup_dev.sh
manifests/: deployment.yaml  service.yaml
src/: __init__.py
src/common/: custom_exception.py  logger.py
src/config/: settings.py
src/generator/: __init__.py  question_generator.py
src/llm/: groq_client.py
src/models/: question_schemas.py
src/prompts/: templates.py
src/utils/: helpers.py
